add functionality to weather button regarding jaco and london

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
-.locations {
+#jaco {
   display: none;
 }
+#london {
+  display: none;
+}
+
+#neworleans {
+  display: none;
+}
+
+ #parkcity {
+   display: none;
+ }
